源文件:第1章完成

--- a/sources/01.Introduction to JavaScript.md
+++ b/sources/01.Introduction to JavaScript.md
@@ -221,158 +221,157 @@ A function is a named and parameterized block of JavaScript code that you define
 
 ```js
 // Functions are parameterized blocks of JavaScript code that we can invoke.
-function plus1(x) { return x + 1;
-// Define a function named "plus1" with parameter "x"
-// Return a value one larger than the value passed in
-// Functions are enclosed in curly braces
-}
-plus1(y)
-let square = function(x) { // Functions are values and can be assigned to vars
-return x * x; };
-square(plus1(y))
-// Compute the function's value
-// Semicolon marks the end of the assignment.
-// => 16: invoke two functions in one expression
-// => 4: y is 3, so this invocation returns 3+1
+function plus1(x) {         // Define a function named "plus1" with parameter "x"
+    return x + 1;           // Return a value one larger than the value passed in
+}                           // Functions are enclosed in curly braces
+
+plus1(y)                    // => 4: y is 3, so this invocation returns 3+1
+
+let square = function(x) {  // Functions are values and can be assigned to vars
+    return x * x;           // Compute the function's value
+};                          // Semicolon marks the end of the assignment.
+square(plus1(y))            // => 16: invoke two functions in one expression
 ```
 
 In ES6 and later, there is a shorthand syntax for defining functions. This concise syn‐ tax uses => to separate the argument list from the function body, so functions defined this way are known as arrow functions. Arrow functions are most commonly used when you want to pass an unnamed function as an argument to another function. The preceding code looks like this when rewritten to use arrow functions:
 
 
 ```js
-const plus1 = x => x + 1; // The input x maps to the output x + 1 const square = x => x * x; // The input x maps to the output x * x
-plus1(y) // => 4: function invocation is the same square(plus1(y)) // => 16
+const plus1 = x => x + 1;   // The input x maps to the output x + 1 
+const square = x => x * x;  // The input x maps to the output x * x
+plus1(y)                    // => 4: function invocation is the same 
+square(plus1(y))            // => 16
 ```
 
 When we use functions with objects, we get methods:
 
-
 ```js
-    // When functions are assigned to the properties of an object, we call
-    // them "methods."  All JavaScript objects (including arrays) have methods:
-let a = []; a.push(1,2,3); a.reverse();
-// Create an empty array
-// The push() method adds elements to an array
-// Another method: reverse the order of elements
-// We can define our own methods, too. The "this" keyword refers to the object // on which the method is defined: in this case, the points array from earlier. points.dist = function() { // Define a method to compute distance between points
-let p1 = this[0];
-let p2 = this[1];
-let a = p2.x-p1.x;
-let b = p2.y-p1.y;
-return Math.sqrt(a*a + // The Pythagorean theorem
-function abs(x) { if(x>=0){ return x;
-} else {
-return -x; }
-}
-abs(-10) === abs(10)
-function sum(array) { letsum=0;
-// A function to compute the absolute value.
-// The if statement...
-// executes this code if the comparison is true.
-// This is the end of the if clause.
-// The optional else clause executes its code if
-// the comparison is false.
-// Curly braces optional when 1 statement per clause.
-// Note return statements nested inside if/else.
-// => true
-// Compute the sum of the elements of an array
-}
-// First element of array we're invoked on
-// Second element of the "this" object
-// Difference in x coordinates
-// Difference in y coordinates
-b*b); // Math.sqrt() computes the square root points.dist() // => Math.sqrt(2): distance between our 2 points
+// When functions are assigned to the properties of an object, we call
+// them "methods."  All JavaScript objects (including arrays) have methods:
+let a = [];         // Create an empty array
+a.push(1,2,3);      // The push() method adds elements to an array
+a.reverse();        // Another method: reverse the order of elements
+
+// We can define our own methods, too. The "this" keyword refers to the object 
+// on which the method is defined: in this case, the points array from earlier. 
+
+points.dist = function() { // Define a method to compute distance between points
+    let p1 = this[0];       // First element of array we're invoked on
+    let p2 = this[1];       // Second element of the "this" object
+    let a = p2.x-p1.x;      // Difference in x coordinates
+    let b = p2.y-p1.y;      // Difference in y coordinates
+    return Math.sqrt(a*a + // The Pythagorean theorem
+                     b*b); // Math.sqrt() computes the square root 
+};
+points.dist()               // => Math.sqrt(2): distance between our 2 points
 ```
+
 
 Now, as promised, here are some functions whose bodies demonstrate common Java‐ Script control structure statements:
 
-
 ```js
-    // JavaScript statements include conditionals and loops using the syntax
-    // of C, C++, Java, and other languages.
-};
-// Start with an initial sum of 0.
-for(let x of array) { // Loop over array, assigning each element to x.
-sum += x; }
-// Add the element value to the sum.
-// This is the end of the loop.
-// Return the sum.
-// => 28: sum of the first 5 primes 2+3+5+7+11
-// A function to compute factorials
-// Start with a product of 1
-// Repeat statements in {} while expr in () is true
-// Shortcut for product = product * n;
-// Shortcut for n = n - 1
-// End of loop
-return sum; sum(primes)
-function factorial(n) { let product = 1;
-while(n > 1) { product *= n;
-n--;
-}
+// JavaScript statements include conditionals and loops using the syntax
+// of C, C++, Java, and other languages.
+function abs(x) {           // A function to compute the absolute value.
+    if(x>=0){               // The if statement...
+        return x;           // executes this code if the comparison is true.
+    }                       // This is the end of the if clause.
+    else {                  // The optional else clause executes its code if
+        return -x;          // the comparison is false.
+    }                       // Curly braces optional when 1 statement per clause.
+}                           // Note return statements nested inside if/else.
+    
+abs(-10) === abs(10)        // => true
 
-return product; factorial(4)
-// Return the product
-// => 24: 1*4*3*2
+function sum(array) {       // Compute the sum of the elements of an array
+    let sum=0;              // Start with an initial sum of 0.
+    for(let x of array) {   // Loop over array, assigning each element to x.
+        sum += x;           // Add the element value to the sum.
+    }                       // This is the end of the loop.
+    return sum;             // Return the sum.
+} 
+sum(primes)                 // => 28: sum of the first 5 primes 2+3+5+7+11
+
+function factorial(n) {     // A function to compute factorials
+    let product = 1;        // Start with a product of 1
+    while(n > 1) {          // Repeat statements in {} while expr in () is true
+        product *= n;       // Shortcut for product = product * n;
+        n--;                // Shortcut for n = n - 1
+    }                       // End of loop
+    return product;         // Return the product
+}   
+factorial(4)                // => 24: 1*4*3*2
+
+function factorial2(n) {    // Another version using a different loop
+    let i, product = 1;     // Start with 1
+    for(i=2; i <= n; i++)   // Automatically increment i from 2 up to n
+        product *= i;       // Do this each time. {} not needed for 1-line loops
+    return product;         // Return the factorial
 }
-class Point { constructor(x, y) {
-this.x = x;
-this.y = y; }
-// By convention, class names are capitalized.
-// Constructor function to initialize new instances.
-// This keyword is the new object being initialized.
-// Store function arguments as object properties.
-// No return is necessary in constructor functions.
-// Another version using a different loop
-// Start with 1
-function factorial2(n) {
-let i, product = 1;
-for(i=2; i <= n; i++) // Automatically increment i from 2 up to n
-product *= i; return product;
-}
-factorial2(5)
-// Do this each time. {} not needed for 1-line loops
-// Return the factorial
-// => 120: 1*2*3*4*5
+factorial2(5)               // => 120: 1*2*3*4*5
 ```
 
-JavaScript supports an object-oriented programming style, but it is significantly dif‐ ferent than “classical” object-oriented programming languages. Chapter 9 covers object-oriented programming in JavaScript in detail, with lots of examples. Here is a very simple example that demonstrates how to define a JavaScript class to represent 2D geometric points. Objects that are instances of this class have a single method, named distance(), that computes the distance of the point from the origin:
+JavaScript supports an object-oriented programming style, but it is significantly dif‐ ferent than “classical” object-oriented programming languages. `Chapter 9` covers object-oriented programming in JavaScript in detail, with lots of examples. Here is a very simple example that demonstrates how to define a JavaScript class to represent 2D geometric points. Objects that are instances of this class have a single method, named distance(), that computes the distance of the point from the origin:
 
+```js   
+class Point {               // By convention, class names are capitalized.
+    constructor(x, y) {     // Constructor function to initialize new instances.
+        this.x = x;         // This keyword is the new object being initialized.
+        this.y = y;         // Store function arguments as object properties.
+    }                       // No return is necessary in constructor functions.
+    distance() {            // Method to compute distance from origin to point.
+        return Math.sqrt(   // Return the square root of x2 + y2.
+        this.x * this.x +   // this refers to the Point object on which
+        this.y * this.y     // the distance method is invoked. );
+    } 
+}
 
-```js
-// Method to compute distance from origin to point.
-distance() {
-return Math.sqrt( // Return the square root of x2 + y2.
-this.x * this.x + // this refers to the Point object on which
-this.y * this.y // the distance method is invoked. );
-} }
-// Use the Point() constructor function with "new" to create Point objects let p = new Point(1, 1); // The geometric point (1,1).
-// Now use a method of the Point object p 
-p.distance() // => Math.SQRT2
+// Use the Point() constructor function with "new" to create Point objects 
+let p = new Point(1, 1);    // The geometric point (1,1).
+
+// Now use a method of the Point object p
+p.distance()                // => Math.SQRT2
 ```
 
 This introductory tour of JavaScript’s fundamental syntax and capabilities ends here, but the book continues with self-contained chapters that cover additional features of the language:
-Chapter 10, Modules
+
+_Chapter 10, Modules_
+
 Shows how JavaScript code in one file or script can use JavaScript functions and classes defined in other files or scripts.
-Chapter 11, The JavaScript Standard Library
+
+_Chapter 11, The JavaScript Standard Library_
+
 Covers the built-in functions and classes that are available to all JavaScript pro‐ grams. This includes important data stuctures like maps and sets, a regular
 
 expression class for textual pattern matching, functions for serializing JavaScript data structures, and much more.
-Chapter 12, Iterators and Generators
+
+_Chapter 12, Iterators and Generators_
+
 Explains how the for/of loop works and how you can make your own classes iterable with for/of. It also covers generator functions and the yield statement.
-Chapter 13, Asynchronous JavaScript
+
+_Chapter 13, Asynchronous JavaScript_
+
 This chapter is an in-depth exploration of asynchronous programming in Java‐ Script, covering callbacks and events, Promise-based APIs, and the async and await keywords. Although the core JavaScript language is not asynchronous, asynchronous APIs are the default in both web browsers and Node, and this chapter explains the techniques for working with those APIs.
-Chapter 14, Metaprogramming
+
+_Chapter 14, Metaprogramming_
+
 Introduces a number of advanced features of JavaScript that may be of interest to programmers writing libraries of code for other JavaScript programmers to use.
-Chapter 15, JavaScript in Web Browsers
+
+_Chapter 15, JavaScript in Web Browsers_
+
 Introduces the web browser host environment, explains how web browsers exe‐ cute JavaScript code, and covers the most important of the many APIs defined by web browsers. This is by far the longest chapter in the book.
-Chapter 16, Server-Side JavaScript with Node
+
+_Chapter 16, Server-Side JavaScript with Node_
+
 Introduces the Node host environment, covering the fundamental programming model and the data structures and APIs that are most important to understand.
-Chapter 17, JavaScript Tools and Extensions
+
+_Chapter 17, JavaScript Tools and Extensions_
+
 Covers tools and language extensions that are worth knowing about because they are widely used and may make you a more productive programmer.
 
 ## 1.4 Example: Character Frequency Histograms
 
-This chapter concludes with a short but nontrivial JavaScript program. Example 1-1 is a Node program that reads text from standard input, computes a character frequency histogram from that text, and then prints out the histogram. You could invoke the program like this to analyze the character frequency of its own source code:
+This chapter concludes with a short but nontrivial JavaScript program. `Example 1-1` is a Node program that reads text from standard input, computes a character frequency histogram from that text, and then prints out the histogram. You could invoke the program like this to analyze the character frequency of its own source code:
 
 * $ node charfreq.js < charfreq.js
 * T: ########### 11.22%
@@ -390,7 +389,8 @@ This chapter concludes with a short but nontrivial JavaScript program. Example 1
 * /: ### 2.88%
 
 This example uses a number of advanced JavaScript features and is intended to demonstrate what real-world JavaScript programs can look like. You should not expect to understand all of the code yet, but be assured that all of it will be explained in the chapters that follow.
-Example 1-1. Computing character frequency histograms with JavaScript
+
+_Example 1-1. Computing character frequency histograms with JavaScript_
 
 ```js
 /**
@@ -401,68 +401,92 @@ Example 1-1. Computing character frequency histograms with JavaScript
  * In a Unix-type environment you can invoke the program like this:
  *    node charfreq.js < corpus.txt
  */
-// This class extends Map so that the get() method returns the specified // value instead of null when the key is not in the map
+
+// This class extends Map so that the get() method returns the specified 
+// value instead of null when the key is not in the map
 class DefaultMap extends Map {
-constructor(defaultValue) {
-super(); // Invoke superclass constructor this.defaultValue = defaultValue; // Remember the default value
+    constructor(defaultValue) {
+        super();                            // Invoke superclass constructor 
+        this.defaultValue = defaultValue;   // Remember the default value
+    }
+    get(key) {
+        if (this.has(key)) {                // If the key is already in the map
+            return super.get(key);          // return its value from superclass.
+        }
+        else {
+            return this.defaultValue;       // Otherwise return the default value      
+        }
+    }
 }
-get(key) {
-if (this.has(key)) {
-return super.get(key); else {
-return this.defaultValue;
-// If the key is already in the map
-// return its value from superclass.
-// Otherwise return the default value
-}
-} }
-}
+
+
 // This class computes and displays letter frequency histograms
-class Histogram { constructor() {
-this.letterCounts = new DefaultMap(0); // Map from letters to counts
-this.totalLetters = 0; // How many letters in all }
+class Histogram { 
+    constructor() {
+        this.letterCounts = new DefaultMap(0); // Map from letters to counts
+        this.totalLetters = 0;                  // How many letters in all 
+    }
+
     // This function updates the histogram with the letters of text.
-add(text) {
-// Remove whitespace from the text, and convert to upper case 
-text = text.replace(/\s/g, "").toUpperCase();
-    // Now loop through the characters of the text
-for(let character of text) {
-let count = this.letterCounts.get(character); // Get old count this.letterCounts.set(character, count+1); // Increment it this.totalLetters++;
-} }
-// Convert the histogram to a string that displays an ASCII graphic
-toString() {
-// Convert the Map to an array of [key,value] arrays let entries = [...this.letterCounts];
-// Sort the array by count, then alphabetically
-entries.sort((a,b) => { // A function to define sort order.
-if (a[1] === b[1]) { // If the counts are the same return a[0] < b[0] ? -1 : 1; // sort alphabetically.
-}else{
-return b[1] - a[1];
-} });
-// Convert the counts to percentages
-// If the counts differ
-// sort by largest count.
-for(let entry of entries) {
-entry[1] = entry[1] / this.totalLetters*100;
-}
+    add(text) {
+        // Remove whitespace from the text, and convert to upper case 
+        text = text.replace(/\s/g, "").toUpperCase();
+
+        // Now loop through the characters of the text
+        for(let character of text) {
+            let count = this.letterCounts.get(character);   // Get old count 
+            this.letterCounts.set(character, count+1);      // Increment it 
+            this.totalLetters++;
+        }
+    }
+    
+    // Convert the histogram to a string that displays an ASCII graphic
+    toString() {
+        // Convert the Map to an array of [key,value] arrays 
+        let entries = [...this.letterCounts];
+
+        // Sort the array by count, then alphabetically
+        entries.sort((a,b) => {                 // A function to define sort order.
+            if (a[1] === b[1]) {                // If the counts are the same 
+                return a[0] < b[0] ? -1 : 1;    // sort alphabetically.
+            }else{                              // If the counts differ
+                return b[1] - a[1];             // sort by largest count.
+            }
+        });
+
+        // Convert the counts to percentages
+        for(let entry of entries) {
+            entry[1] = entry[1] / this.totalLetters*100;
+        }
+
         // Drop any entries less than 1%
         entries = entries.filter(entry => entry[1] >= 1);
+        
         // Now convert each entry to a line of text
-let lines = entries.map(
-([l,n]) => `${l}: ${"#".repeat(Math.round(n))} ${n.toFixed(2)}%`
-);
+        let lines = entries.map(
+            ([l,n]) => `${l}: ${"#".repeat(Math.round(n))} ${n.toFixed(2)}%`
+        );
+
         // And return the concatenated lines, separated by newline characters.
-return lines.join("\n"); }
+        return lines.join("\n"); 
+    }
 }
+
 // This async (Promise-returning) function creates a Histogram object,
-// asynchronously reads chunks of text from standard input, and adds those chunks to // the histogram. When it reaches the end of the stream, it returns this histogram async function histogramFromStdin() {
-process.stdin.setEncoding("utf-8"); // Read Unicode strings, not bytes let histogram = new Histogram();
-for await (let chunk of process.stdin) {
+// asynchronously reads chunks of text from standard input, and adds those chunks to // the histogram. When it reaches the end of the stream, it returns this histogram 
+
+async function histogramFromStdin() {
+    process.stdin.setEncoding("utf-8"); // Read Unicode strings, not bytes 
+    let histogram = new Histogram();
+    for await (let chunk of process.stdin) {
         histogram.add(chunk);
     }
-return histogram; }
-
+    return histogram; 
+}
 
 // This one final line of code is the main body of the program.
-// It makes a Histogram object from standard input, then prints the histogram. histogramFromStdin().then(histogram => { console.log(histogram.toString()); });
+// It makes a Histogram object from standard input, then prints the histogram.
+histogramFromStdin().then(histogram => { console.log(histogram.toString()); });
 ```
 
 # 1.5 Summary
