完成第一章的部分

--- a/sources/010.Introduction to JavaScript.md
+++ b/sources/010.Introduction to JavaScript.md
@@ -7,7 +7,7 @@ If you are already familiar with other programming languages, it may help you to
 
 The name “JavaScript” is quite misleading. Except for a superficial syntactic resem‐ blance, JavaScript is completely different from the Java programming language. And JavaScript has long since outgrown its scripting-language roots to become a robust and efficient general-purpose language suitable for serious software engineering and projects with huge codebases.
 
-<div style="border: 1px solid black;padding:10px">
+<div style="border: 1px solid black; padding:10px; margin: 10px 0">
   <center><h2>JavaScript: Names, Versions, and Modes<h2></center>
   <p>JavaScript was created at Netscape in the early days of the web, and technically, “Java‐ Script” is a trademark licensed from Sun Microsystems (now Oracle) used to describe Netscape’s (now Mozilla’s) implementation of the language. Netscape submitted the language for standardization to ECMA—the European Computer Manufacturer’s Association—and because of trademark issues, the standardized version of the lan‐ guage was stuck with the awkward name “ECMAScript.” In practice, everyone just calls the language JavaScript. This book uses the name “ECMAScript” and the abbre‐ viation “ES” to refer to the language standard and to versions of that standard.</p>
   <p>For most of the 2010s, version 5 of the ECMAScript standard has been supported by all web browsers. This book treats ES5 as the compatibility baseline and no longer discusses earlier versions of the language. ES6 was released in 2015 and added major new features—including class and module syntax—that changed JavaScript from a scripting language into a serious, general-purpose language suitable for large-scale software engineering. Since ES6, the ECMAScript specification has moved to a yearly release cadence, and versions of the language—ES2016, ES2017, ES2018, ES2019, and ES2020—are now identified by year of release.</p>
@@ -30,7 +30,7 @@ When learning a new programming language, it’s important to try the examples i
 
 The easiest way to try out a few lines of JavaScript is to open up the web developer tools in your web browser (with F12, Ctrl-Shift-I, or Command-Option-I) and select the Console tab. You can then type code at the prompt and see the results as you type. Browser developer tools often appear as panes at the bottom or right of the browser window, but you can usually detach them as separate windows (as pictured in `Figure 1-1`), which is often quite convenient.
 
-<div style="border: 1px solid black;padding:10px">
+<div style="border: 1px solid black; padding:10px; margin: 10px 0">
   <img src='./img/1-1.png'/>
 </div>
 
@@ -166,7 +166,7 @@ let data = {                // An object with 2 properties
 };
 ```
 
-<div style="border: 1px solid black;padding:10px">
+<div style="border: 1px solid black; padding:10px; margin: 10px 0">
   <center><h2>Comment Syntax in Code Examples<h2></center>
   <p>You may have noticed in the preceding code that some of the comments begin with an arrow (=>). These show the value produced by the code before the comment and are my attempt to emulate an interactive JavaScript environment like a web browser console in a printed book.</p>
   <p>Those // => comments also serve as an assertion, and I’ve written a tool that tests the code and verifies that it produces the value specified in the comment. This should help, I hope, to reduce errors in the book.</p>
