--- a/sources/030.Types, Values, and Variables.md
+++ b/sources/030.Types, Values, and Variables.md
@@ -180,7 +180,7 @@ For example:
 1.4738223E-32 // 1.4738223 × 10 ⁻ ³²
 ```
 
-<div style="border: 1px solid black;padding:10px">
+<div style="border: 1px solid black; padding:10px; margin: 10px 0">
   <center><h2>Separators in Numeric Literals<h2></center>
   <p>You can use underscores within numeric literals to break long literals up into chunks
 that are easier to read:</p>
@@ -463,7 +463,7 @@ Script does not have a special type that represents a single element of a string
 resent a single 16-bit value, simply use a string that has a length of 1.
 
 
-<div style="border: 1px solid black;padding:10px">
+<div style="border: 1px solid black; padding:10px; margin: 10px 0">
   <center><h2>Characters, Codepoints, and JavaScript Strings<h2></center>
   <p>JavaScript uses the UTF-16 encoding of the Unicode character set, and JavaScript
 strings are sequences of unsigned 16-bit values. The most commonly used Unicode
@@ -1879,7 +1879,7 @@ may be better off just writing out your assignments explicitly with traditional 
 like `let x1 = points.p1[0]`; 
 
 
-<div style="border: 1px solid black;padding:10px">
+<div style="border: 1px solid black; padding:10px; margin: 10px 0">
   <center><h2>Understanding Complex Destructuring<h2></center>
   <p>If you find yourself working with code that uses complex destructuring assignments,
 there is a useful regularity that can help you make sense of the complex cases. Think
